--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npm run prod"
   publish = "build_production"
   environment = { PHP_VERSION = "8.0" }
 
