--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
         "prod": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/line-clamp": "^0.3.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "@types/tailwindcss": "^3.1.0",
         "laravel-mix": "^6.0.39",
         "laravel-mix-jigsaw": "^1.5.0",
         "postcss": "^8.2.4",
         "postcss-import": "^14.0.0",
         "tailwindcss": "^3.1.7",
-        "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/forms": "^0.4.0",
-        "@tailwindcss/line-clamp": "^0.3.0",
-        "@tailwindcss/typography": "^0.5.0",
-        "@types/tailwindcss": "^3.1.0"
+        "autoprefixer": "10.4.5"
     }
 }
